k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oficina-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oficina-api
  template:
    metadata:
      labels:
        app: oficina-api
    spec:
      containers:
      - name: oficina-api
        image: acrfst.azurecr.io/ps-tech-api:43a68820b44bc16172b02c5b5b992f0fb91987b5
        ports:
        - containerPort: 3333
        resources:
          requests:
            cpu: "250m"      
            memory: "256Mi"
          limits:
            cpu: "500m"     
            memory: "512Mi" 
        livenessProbe:
          httpGet:
            path: /api/v1/oficina
            port: 3333
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/v1/oficina
            port: 3333
          initialDelaySeconds: 30
          periodSeconds: 10
