k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oficina-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oficina-app
  template:
    metadata:
      labels:
        app: oficina-app
    spec:
      containers:
      - name: oficina-app
        image: viniciusmarinheiro/oficina-api:latest # substitua pela imagem publicada
        ports:
        - containerPort: 3333
