k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-api
spec:
  selector:
    app: oficina-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3333
  type: ClusterIP
