k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-app
spec:
  type: NodePort
  selector:
    app: oficina-app
  ports:
  - port: 3333
    targetPort: 3333
    nodePort: 30333
